[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py-ladder-diagram"
authors = [{name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["version", "description"]
dependencies = [
    "drawsvg >= 2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.2.0",
    "xdoctest >= 1.1.3",
    "pytest-pydocstyle >= 2.3.2",
    "pygments >= 2.18.0",
    "pytest-markdown-docs >= 0.5.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "pyld",
    "README.md",
]
addopts = "--pydocstyle --xdoctest --markdown-docs --importmode=importlib"

[tool.pydocstyle]
convention = "numpy"
match-dir = "pyld/"

[project.urls]
Home = "https://github.com/engineerjoe440/pyld"
Repository = "https://github.com/engineerjoe440/pyld"
Issues = "https://github.com/engineerjoe440/pyld/issues"

[tool.flit.module]
name = "pyld"
